--- a/VRChat/11/1365711.html
+++ b/VRChat/11/1365711.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Ve9IwTER/Xf6oIcs3IDnpSsTPwBaRkccuno5dsNUL7U="></script>
+    "iRYekkSPE33uwkSyRqh79yWPqS+ILKdnrC1eABWYRJY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"マグライト（VRChat想定）","description":"マグライトのモデルです。\nテクスチャ適応モデル1種+迷彩柄6種類。\n※内容物だけでは光らないので、UnityにてLightを付けて光らせてください。\n※ライトを下から見るとテクスチャの境目が見えます。\nこちらのモデルはVRChatでの使用を想定して作っていますが、禁止事項を守って頂ければVRChat以外でもご自由にご利用ください。\n\n内容物\n・MugLight.fbx（一部テクスチャ改変可能黒色マグライト）\n・MugLightAshCamo.fbx（灰色迷彩柄）\n・MugLightBrownCamo.fbx（茶色迷彩柄）\n・MugLightDarkPurpleCamo.fbx（暗い紫色迷彩柄）\n・MugLightGreenCamo.fbx（緑色迷彩柄）\n・MugLightLightPurpleCamo.fbx（明るい紫色迷彩柄）\n・MugLightRedCamo.fbx（赤色迷彩柄）\n・MugLight.png（黒色マグライト用テクスチャ）\n・MugLightUV.png（黒色マグライト用テクスチャのUV画像）\n・迷彩柄暗い紫.png（迷彩柄テクスチャ）\n・迷彩柄灰.png（迷彩柄テクスチャ）\n・迷彩柄紫.png（迷彩柄テクスチャ）\n・迷彩柄赤.png（迷彩柄テクスチャ）\n・迷彩柄茶.png（迷彩柄テクスチャ）\n・迷彩柄緑.png（迷彩柄テクスチャ）\n・Mirror.mat（鏡面のマテリアル）\n・LED.mat（LED用エミッション付マテリアル）\n・Glass.mat（レンズ面用マテリアル）\n\n使用方法\nUnityに使用したいモデルと対応したテクスチャを入れてください。\nGlassにはGlass.mat、LEDにはLED.mat、MirrorにはMirror.mat（各マテリアル）をドラッグアンドドロップで適応してください。\nまた、黒色のマグライト（MugLight.fbx）にはテクスチャをMugLightへ適応してください。（テクスチャを使用せず、マテリアルを作成しAlbedoの変更にてカラー変更可能です。）\n迷彩柄は迷彩柄のテクスチャが最初から適応されているので、上記3つのマテリアル適応だけでOKです。\n\n迷彩柄テクスチャは私が作成しました。\nシームレスではないので使い勝手は悪いですが、他のモデルに使用したいなどあった場合はご自由にお使いください。\n\n禁止事項\n再配布（ゲームへの組み込み・VRCのペデスタル等はOK）\n政治的・宗教的・差別的な用途への利用","url":"https://booth.pm/ja/items/1365711","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/c4dfbeda-de4a-441b-ace4-484612b68061/i/1365711/36efc32c-b0c4-4169-86ba-809a2685d48e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Ve9IwTER/Xf6oIcs3IDnpSsTPwBaRkccuno5dsNUL7U="></script>
+    nonce="iRYekkSPE33uwkSyRqh79yWPqS+ILKdnrC1eABWYRJY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1365711/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               122
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1365711/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               122
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
