--- a/VRChat/87/1364287.html
+++ b/VRChat/87/1364287.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "/SJU2ECRb0ooE9Qhg73FAqmlb/yywMzOQmRQuno4rPo="></script>
+    "wYE8zFWmDTE0hLEath9Ha+OLtPmAOs2F8wzG8netPJY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"インドの屋台で使われているナイフ","description":"※重要※\n本作品は初心者による制作・無料配布なので一切のサポートや更新はありません。ご了承ください。\n\n△628ポリゴン\n\nVRChat利用想定の3Dモデルです。\nインドの屋台で使われている細長いナイフを作ってみました。\nモデリング初心者が作成したのでクオリティは劣りますがご了承ください。\n\n▼内容物\n　FBX２種（色設定済・色設定無）\n　UV配置PNGテクスチャ１枚\n　テキスト１枚\n\n尚、商品画像に使用しているモデルは含まれておりません。\nわこーさんの悪魔っ子ミウちゃんをモデルとしてお借りしました。\nhttps://booth.pm/ja/items/1340085\n\n\n◆利用規約◆\n\nVRChatの利用想定\n\n・商用・個人・改変・ワールドご自由にお使いください。（改変はテクスチャ・ＦＢＸファイルどちらも）\n\n・無償での再配布可（有償での再配布不可）\n再配布する場合は当ショップを宣伝してくれると喜びます。\n\n・使用用途は自由ですが、他の人に迷惑のかからない範囲でご利用ください\n\n・初心者による制作・無料配布なので一切のサポートは致しませんのでご了承ください。\n\n\n\n","url":"https://booth.pm/ja/items/1364287","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e94afb69-0d10-4493-8402-671fdaa09d79/i/1364287/5cd3d4f0-4fcf-47a8-b648-974c7247333e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/SJU2ECRb0ooE9Qhg73FAqmlb/yywMzOQmRQuno4rPo="></script>
+    nonce="wYE8zFWmDTE0hLEath9Ha+OLtPmAOs2F8wzG8netPJY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1364287/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               38
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1364287/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               38
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
