--- a/VRChat/09/1363609.html
+++ b/VRChat/09/1363609.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "eA98e2lc8WOX6qmdowPHMOrprUWLsgS94TlOlknyJAY="></script>
+    "OdhfA3Pb+NabInKrVbff9XZvlMTpOa/iomfW+K0pO1U="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"リーチャ隊長ステッカー（呆然）","description":"この商品はpixivFACTORYで作られた商品です。サンプル画像は完成イメージのため、実物と異なる場合があります。\n\nTwitterで好評連載中！VRChat体験記漫画の隊長ステッカー呆然仕様！呆然とする場所に貼れ！\n\nVRChat体験記（漫画）↓\nhttps://twitter.com/rietzscha/status/1085751861376737280","url":"https://booth.pm/ja/items/1363609","offers":{"priceCurrency":"JPY","@type":"Offer","price":"580"},"image":"https://booth.pximg.net/c/620x620/5aa4ad1f-09ca-4316-86f9-8caea276a4ba/i/1363609/dea6ce2e-cb43-4afa-ae9c-7efb8d562bcb_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="eA98e2lc8WOX6qmdowPHMOrprUWLsgS94TlOlknyJAY="></script>
+    nonce="OdhfA3Pb+NabInKrVbff9XZvlMTpOa/iomfW+K0pO1U="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1363609/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               5
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1363609/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               5
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
@@ -351,7 +352,7 @@
                                     "legacy-list-item__content">
                                       <div class="u-d-sp-block">
                                         <span class=
-                                        "autolink u-text-wrap">2023/05/15</span>
+                                        "autolink u-text-wrap">2023/05/16</span>
                                       </div>
                                     </div>
                                   </div>
