--- a/VRChat/49/1363049.html
+++ b/VRChat/49/1363049.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "UTrqhXpGqifSA10+yWp6uxk4u/BeH6hKdEzizFglZzA="></script>
+    "4/A7fEcEOUK5ESmNDlCFUv2J8NVvmYNvZwWtOdbbu0A="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ものカウンターシェーダー","description":"自分のゲームワールドで使っている、物をカウント・表示するためのシェーダーですー！\n\n使い方の説明は中に同梱されているSampleSceneを見てください\n\n\n----------------------\n【そのた】\n改変、商用利用、ワールドへの同梱などなど大丈夫です\nそのままの再配布だけはご遠慮ください。\n----------------------\n\n作成：こおりみず","url":"https://booth.pm/ja/items/1363049","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8eae0ce3-7d8e-4436-9710-ea35a9636d4c/i/1363049/8edcd149-cfb6-4bfe-895a-b5e96f421ea2_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="UTrqhXpGqifSA10+yWp6uxk4u/BeH6hKdEzizFglZzA="></script>
+    nonce="4/A7fEcEOUK5ESmNDlCFUv2J8NVvmYNvZwWtOdbbu0A="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1363049/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               123
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1363049/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               123
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
