--- a/VRChat/07/1351607.html
+++ b/VRChat/07/1351607.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "zzoond1nlxGzZPsrXr0zbCicRSIqc6eHNWOwBfOAd58="></script>
+    "Tnntf0W4UqHlb6yqM2XbAoIwmziefipvuCUVhQH1LGY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"CV缶（ガス缶）の３Dモデル","description":"アウトドアとかで使うあの缶の3Dモデルです。\nオマケで水素管がついてきます。\n\n△1896","url":"https://booth.pm/ja/items/1351607","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/2a8fa413-9aae-418b-b8f0-3b776e7c7bc6/i/1351607/5679b95f-00d0-44ac-9305-edd3b8f1c82f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zzoond1nlxGzZPsrXr0zbCicRSIqc6eHNWOwBfOAd58="></script>
+    nonce="Tnntf0W4UqHlb6yqM2XbAoIwmziefipvuCUVhQH1LGY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1351607/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               24
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1351607/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               24
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
